--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,67 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  h1,
+  h2,
+  h3 {
+    @apply font-brand;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+:root {
+  --bg-1: #fff;
+  --bg-2: #fff;
+  --bg-3: #fafaf9;
+  --bg-4: #f7f6f6;
+  --border-1: #f1f1f0;
+  --border-2: #e1e1e0;
+  --fg-1: #211d1d;
+  --fg-2: #636161;
+  --fg-3: #8f8e8e;
+  --fg-4: #bcbbbb;
+  --purple-1: #9898ff;
+  --purple-2: #bcbbff;
+  --purple-3: #e5e5ff;
+  --purple-4: #faf9ff;
+  --blue-1: #1c4886;
+  --blue-2: #5d7eaa;
+  --blue-3: #e0eaf2;
+  --blue-4: #f6fcfe;
+  --gho-1: #28d358;
+  --focus: #9898ff;
+
+  --duration-snappy: 750ms;
+  --ease-snappy: cubic-bezier(0.175, 0.885, 0.32, 1.1);
+  --duration-swift: 1800ms;
+  --ease-swift: cubic-bezier(0.19, 1, 0.22, 1);
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --scrollbar-width: 6px;
+}
+
+@supports (color: color(display-p3 1 1 1)) {
+  :root {
+    --bg-1: color(display-p3 1 1 1 / 1);
+    --bg-2: color(display-p3 1 1 1 / 1);
+    --bg-3: color(display-p3 0.9803921569 0.9803921569 0.9764705882 / 1);
+    --bg-4: color(display-p3 0.968627451 0.9647058824 0.9647058824 / 1);
+    --border-1: color(display-p3 0.9450980392 0.9450980392 0.9411764706 / 1);
+    --border-2: color(display-p3 0.8823529412 0.8823529412 0.8784313725 / 1);
+    --fg-1: color(display-p3 0.1294117647 0.1137254902 0.1137254902 / 1);
+    --fg-2: color(display-p3 0.3882352941 0.3803921569 0.3803921569 / 1);
+    --fg-3: color(display-p3 0.5607843137 0.5568627451 0.5568627451 / 1);
+    --fg-4: color(display-p3 0.737254902 0.7333333333 0.7333333333 / 1);
+    --purple-1: color(display-p3 0.5960784314 0.5960784314 1 / 1);
+    --purple-2: color(display-p3 0.737254902 0.7333333333 1 / 1);
+    --purple-3: color(display-p3 0.8980392157 0.8980392157 1 / 1);
+    --purple-4: color(display-p3 0.9803921569 0.9764705882 1 / 1);
+    --blue-1: color(display-p3 0.1098039216 0.2823529412 0.5254901961 / 1);
+    --blue-2: color(display-p3 0.3647058824 0.4941176471 0.6666666667 / 1);
+    --blue-3: color(display-p3 0.8784313725 0.9176470588 0.9490196078 / 1);
+    --blue-4: color(display-p3 0.9647058824 0.9882352941 0.9960784314 / 1);
+    --gho-1: color(display-p3 0.1568627451 0.8274509804 0.3450980392 / 1);
+    --focus: color(display-p3 0.5960784314 0.5960784314 1 / 1);
+  }
 }
