--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,12 @@
   }
 }
 
+@layer utilities {
+  .section-styles {
+    @apply flex flex-col items-center w-full px-5 md:px-12 py-[100px];
+  }
+}
+
 :root {
   --bg-1: #fff;
   --bg-2: #fff;
@@ -55,23 +61,23 @@
   :root {
     --bg-1: color(display-p3 1 1 1 / 1);
     --bg-2: color(display-p3 1 1 1 / 1);
-    --bg-3: color(display-p3 0.9803921569 0.9803921569 0.9764705882 / 1);
-    --bg-4: color(display-p3 0.968627451 0.9647058824 0.9647058824 / 1);
-    --border-1: color(display-p3 0.9450980392 0.9450980392 0.9411764706 / 1);
-    --border-2: color(display-p3 0.8823529412 0.8823529412 0.8784313725 / 1);
-    --fg-1: color(display-p3 0.1294117647 0.1137254902 0.1137254902 / 1);
-    --fg-2: color(display-p3 0.3882352941 0.3803921569 0.3803921569 / 1);
-    --fg-3: color(display-p3 0.5607843137 0.5568627451 0.5568627451 / 1);
-    --fg-4: color(display-p3 0.737254902 0.7333333333 0.7333333333 / 1);
-    --purple-1: color(display-p3 0.5960784314 0.5960784314 1 / 1);
-    --purple-2: color(display-p3 0.737254902 0.7333333333 1 / 1);
-    --purple-3: color(display-p3 0.8980392157 0.8980392157 1 / 1);
-    --purple-4: color(display-p3 0.9803921569 0.9764705882 1 / 1);
-    --blue-1: color(display-p3 0.1098039216 0.2823529412 0.5254901961 / 1);
-    --blue-2: color(display-p3 0.3647058824 0.4941176471 0.6666666667 / 1);
-    --blue-3: color(display-p3 0.8784313725 0.9176470588 0.9490196078 / 1);
-    --blue-4: color(display-p3 0.9647058824 0.9882352941 0.9960784314 / 1);
-    --gho-1: color(display-p3 0.1568627451 0.8274509804 0.3450980392 / 1);
-    --focus: color(display-p3 0.5960784314 0.5960784314 1 / 1);
+    --bg-3: color(display-p3 0.9804 0.9804 0.9764 / 1);
+    --bg-4: color(display-p3 0.9686 0.9647 0.9647 / 1);
+    --border-1: color(display-p3 0.9451 0.9451 0.9411 / 1);
+    --border-2: color(display-p3 0.8823 0.8823 0.8784 / 1);
+    --fg-1: color(display-p3 0.1294 0.1137 0.1137 / 1);
+    --fg-2: color(display-p3 0.3882 0.3804 0.3804 / 1);
+    --fg-3: color(display-p3 0.5608 0.5569 0.5569 / 1);
+    --fg-4: color(display-p3 0.7373 0.7333 0.7333 / 1);
+    --purple-1: color(display-p3 0.5961 0.5961 1 / 1);
+    --purple-2: color(display-p3 0.7373 0.7333 1 / 1);
+    --purple-3: color(display-p3 0.898 0.898 1 / 1);
+    --purple-4: color(display-p3 0.9804 0.9765 1 / 1);
+    --blue-1: color(display-p3 0.1098 0.2824 0.5255 / 1);
+    --blue-2: color(display-p3 0.3647 0.4941 0.6667 / 1);
+    --blue-3: color(display-p3 0.8784 0.9176 0.949 / 1);
+    --blue-4: color(display-p3 0.9647 0.9882 0.9961 / 1);
+    --gho-1: color(display-p3 0.1569 0.8275 0.3451 / 1);
+    --focus: color(display-p3 0.5961 0.5961 1 / 1);
   }
 }
