Add features section

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,7 @@
   --bg-2: #fff;
   --bg-3: #fafaf9;
   --bg-4: #f7f6f6;
+  --bg-5: #f7f6f6;
   --border-1: #f1f1f0;
   --border-2: #e1e1e0;
   --fg-1: #211d1d;
@@ -71,6 +72,7 @@
     --bg-2: color(display-p3 1 1 1 / 1);
     --bg-3: color(display-p3 0.9804 0.9804 0.9764 / 1);
     --bg-4: color(display-p3 0.9686 0.9647 0.9647 / 1);
+    --bg-5: color(display-p3 0.988235 0.988235 0.988235);
     --border-1: color(display-p3 0.9451 0.9451 0.9411 / 1);
     --border-2: color(display-p3 0.8823 0.8823 0.8784 / 1);
     --fg-1: color(display-p3 0.1294 0.1137 0.1137 / 1);
