--- a/app/globals.css
+++ b/app/globals.css
@@ -91,3 +91,58 @@
     --focus: color(display-p3 0.5961 0.5961 1 / 1);
   }
 }
+
+.link-more {
+  margin: 2rem 0;
+  display: flex;
+  align-items: center;
+  column-gap: 4px;
+  position: relative;
+  padding-bottom: 8px;
+  width: fit-content;
+  text-decoration-line: none;
+  font-weight: 500;
+  font-feature-settings: "cv11" on, "ss01" on, "ss03" on;
+  line-height: 1;
+  letter-spacing: -0.18px;
+  transition: 0.2s ease;
+  transition-property: background-size;
+  background-image: linear-gradient(180deg, currentColor 0, currentColor);
+  background-size: 0 100%;
+  background-repeat: no-repeat;
+  background-position: 0 1.4em;
+}
+
+.link-more:hover {
+  background-size: 100% 100%;
+  transition-delay: 0.2s;
+}
+
+.link-more::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 1.5px;
+  background-image: linear-gradient(
+    90deg,
+    currentColor,
+    currentColor 33.33%,
+    transparent 0,
+    transparent 66.66%,
+    currentColor 0,
+    currentColor
+  );
+  background-position: right 0 bottom 0;
+  background-size: 300% 2px;
+  background-repeat: no-repeat;
+  opacity: 0.4;
+  transition: inherit;
+  transition-property: background-position, opacity;
+}
+
+.link-more:hover::before {
+  opacity: 1;
+  background-position: right 50% bottom 0;
+  transition-delay: 0ms;
+}
