--- a/app/globals.css
+++ b/app/globals.css
@@ -59,11 +59,16 @@
   --green: #63bbb6;
   --yellow: #ffd631;
 
-  --duration-snappy: 750ms;
   --ease-snappy: cubic-bezier(0.175, 0.885, 0.32, 1.1);
-  --duration-swift: 1800ms;
   --ease-swift: cubic-bezier(0.19, 1, 0.22, 1);
-  --scrollbar-width: 6px;
+
+  --gradient-stops: #fff 0, hsla(0, 0%, 100%, 0.738) 19%,
+    hsla(0, 0%, 100%, 0.541) 34%, hsla(0, 0%, 100%, 0.382) 47%,
+    hsla(0, 0%, 100%, 0.278) 56.5%, hsla(0, 0%, 100%, 0.194) 65%,
+    hsla(0, 0%, 100%, 0.126) 73%, hsla(0, 0%, 100%, 0.075) 80.2%,
+    hsla(0, 0%, 100%, 0.042) 86.1%, hsla(0, 0%, 100%, 0.021) 91%,
+    hsla(0, 0%, 100%, 0.008) 95.2%, hsla(0, 0%, 100%, 0.002) 98.2%,
+    hsla(0, 0%, 100%, 0);
 }
 
 @supports (color: color(display-p3 1 1 1)) {
@@ -145,4 +150,25 @@
   opacity: 1;
   background-position: right 50% bottom 0;
   transition-delay: 0ms;
+}
+
+.trusted-by::before,
+.trusted-by::after {
+  z-index: 2;
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 10rem;
+}
+
+.trusted-by::before {
+  left: 0;
+  background-image: linear-gradient(90deg, var(--gradient-stops));
+}
+
+.trusted-by::after {
+  right: 0;
+  background-image: linear-gradient(270deg, var(--gradient-stops));
 }
