--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,14 @@
     @apply font-brand;
   }
 
+  h1 {
+    @apply mb-4 text-[2.5rem] md:text-5xl font-semibold leading-[3rem] md:leading-[55px] tracking-[-.075rem] md:tracking-[-1.44px];
+  }
+
+  h2 {
+    @apply text-[2.5rem] font-semibold md:leading-[135%] md:tracking-[-0.8px] leading-[3.4375rem] tracking-[-0.075rem];
+  }
+
   img,
   svg {
     display: inline-block;
