Add security section

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@
   --bg-2: #fff;
   --bg-3: #fafaf9;
   --bg-4: #f7f6f6;
-  --bg-5: #f7f6f6;
+  --bg-5: #fcfcfb;
   --border-1: #f1f1f0;
   --border-2: #e1e1e0;
   --fg-1: #211d1d;
